--- a/animation/style.css
+++ b/animation/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 #canvas {
-    /* border: 0.2rem solid white; */
+    border: 0.2rem solid white;
     border-radius: 5px;
     width: 15rem;
     height: 20rem;
@@ -19,11 +19,14 @@ body {
 }
 
 .navigation {
+    position: relative;
     margin: 1rem auto;
-    width: auto;
+    width: 50%;
+    height: 30rem;
     display: flex;
     justify-content: space-around;
     align-items: center;
+    border: 1px solid white;
 }
 
 .left, .right, .up, .down {
@@ -33,6 +36,43 @@ body {
     padding: 1rem 2rem;
     font-size: 2rem;
     cursor: pointer;
+    text-align: center;
+}
+
+.left {
+    position: absolute;
+    top: 50%;
+    left: 1rem;
+    transform: translate(0, -50%);
+    width: 10rem;
+}
+
+.right {
+    position: absolute;
+    top: 50%;
+    right: 1rem;
+    transform: translate(0, -50%);
+    width: 10rem;
+}
+
+.up {
+    position: absolute;
+    top: 1rem;
+    left: 50%;
+    transform: translate(-50%, 0);
+    height: 10rem;
+    max-width: 1.5rem;
+    word-break: break-all;
+}
+
+.down {
+    position: absolute;
+    bottom: 1rem;
+    left: 50%;
+    transform: translate(-50%, 0);
+    height: 10rem;
+    max-width: 1.5rem;
+    word-break: break-all;
 }
 
 .left:hover, .right:hover, .up:hover, .down:hover {
