--- a/animation/style.css
+++ b/animation/style.css
@@ -81,8 +81,12 @@ body {
 
 .speed {
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    color: #fff;
+    font-size: 1.8rem;
 }
 
 .showSpeed {
