--- a/animation/style.css
+++ b/animation/style.css
@@ -9,36 +9,49 @@ body {
 }
 
 #canvas {
-    border: 0.2rem solid white;
+    /* border: 0.2rem solid white; */
     border-radius: 5px;
     width: 60rem;
     height: 25rem;
     position: relative;
     left: 50%;
     transform: translate(-50%, 0);
+    -webkit-box-shadow: 5px 5px 47px 10px rgba(37, 129, 201, 0.56);
+    -moz-box-shadow: 5px 5px 47px 10px rgba(37, 129, 201, 0.56);
+    box-shadow: 5px 5px 47px 10px rgba(37, 129, 201, 0.56);
+    padding: 2rem 2rem 4rem 2rem;
 }
 
 .navigation {
     position: relative;
     margin: 1rem auto;
-    width: 50%;
+    width: 80%;
     height: 30rem;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    border: 1px solid white;
+    /* border: 1px solid white; */
 }
 
-.left, .right, .up, .down {
+.navigation > button:active {
+    background: #161715;
+}
+
+.left, .right, .up, .down, .turbo, .jump {
     display: block;
     border: 1px solid white;
-    border-radius: .2rem;
+    border-radius: 1rem;
     color: white;
     font-size: 2rem;
     cursor: pointer;
     text-align: center;
     background-color: black;
+    -webkit-box-shadow: 0px 5px 18px 19px rgba(37, 129, 201, 0.2);
+    -moz-box-shadow: 0px 5px 18px 19px rgba(37, 129, 201, 0.2);
+    box-shadow: 0px 5px 18px 19px rgba(37, 129, 201, 0.2);
+    transition: all .2s;
 }
+
 
 .left {
     position: absolute;
@@ -53,7 +66,7 @@ body {
 .right {
     position: absolute;
     top: 50%;
-    right: 1rem;
+    left: 18rem;
     transform: translate(0, -50%);
     width: 14rem;
     height: 6rem;
@@ -81,14 +94,42 @@ body {
     word-break: break-all;
 }
 
+.turbo {
+    position: absolute;
+    top: 0;
+    right: 0;
+    /* transform: translate(0, -50%); */
+    width: 10rem;
+    height: 10rem;
+    user-select: none;
+    border-radius: 50%;
+    border: 1px solid white;
+}
+
+.jump {
+    position: absolute;
+    bottom: 0;
+    right: 10rem;
+    /* transform: translate(0, -50%); */
+    width: 10rem;
+    height: 10rem;
+    user-select: none;
+    border-radius: 50%;
+    border: 1px solid white;
+}
+
 
 @media only screen and (min-width: 1024px) {
-    .left:hover, .right:hover, .up:hover, .down:hover {
+    /* .left:hover, .right:hover, .up:hover, .down:hover {
         color: green;
-    }
+    } */
 }
 
 .speed {
+    position: absolute;
+    top: 2rem;
+    left: 0;
+    z-index: 11;
     display: flex;
     /* flex-direction: column; */
     align-items: center;
@@ -127,7 +168,7 @@ body {
 @media only screen and (max-width: 1024px) {
     #canvas {
         border: none;
-        width: 100vw;
+        width: 90%;
         height: 40vh;
         position: relative;
     }
@@ -151,9 +192,11 @@ body {
 @media only screen and (max-width: 650px) {
     #canvas {
         border: none;
-        width: 100vw;
+        /* width: 90vw; */
         height: 25vh;
         position: relative;
+        padding: 1rem 1rem 2rem 1rem;
+        /* margin: 1rem; */
     }
 
     .navigation {
@@ -169,5 +212,9 @@ body {
 
     .speed {
         justify-content: flex-end;
+    }
+
+    .jump {
+        right: 0;
     }
 }
