--- a/animation/style.css
+++ b/animation/style.css
@@ -37,7 +37,7 @@ body {
     background: #161715;
 }
 
-.left, .right, .up, .down, .turbo, .jump {
+.left, .right, .up, .down, .turbo, .jump, .monster__count, .timer {
     display: block;
     border: 1px solid white;
     border-radius: 1rem;
@@ -50,6 +50,17 @@ body {
     -moz-box-shadow: 0px 5px 18px 19px rgba(37, 129, 201, 0.2);
     box-shadow: 0px 5px 18px 19px rgba(37, 129, 201, 0.2);
     transition: all .2s;
+}
+
+.timer {
+    position: absolute;
+    top: 5rem;
+    left: 1rem;
+    padding: 1rem;
+    /* transform: translate(0, -50%);
+    width: 14rem;
+    height: 6rem;
+    user-select: none; */
 }
 
 
@@ -116,6 +127,14 @@ body {
     user-select: none;
     border-radius: 50%;
     border: 1px solid white;
+}
+
+.monster__count {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding: 1rem;
+    word-break: break-all;
 }
 
 
@@ -212,9 +231,15 @@ body {
 
     .speed {
         justify-content: flex-end;
+        top: 0;
+        left: 1rem;
     }
 
     .jump {
         right: 0;
+    }
+
+    .monster__count {
+        max-width: 50%;
     }
 }
