--- a/animation/style.css
+++ b/animation/style.css
@@ -6,7 +6,37 @@ body {
     padding: 0;
     margin: 0;
     background: black;
+    height: 100vh;
 }
+
+.help__text {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 11;
+    font-size: 4rem;
+    color: #fff;
+    padding: 1rem;
+    word-wrap: break-word;
+    text-align: center;
+    user-select: none;
+}
+
+.heart {
+    animation: progress .3s linear
+}
+
+@keyframes progress {
+    0% {
+        scale: 1;
+    }
+    100% {
+        scale: 1.3;
+    }
+}
+
+
 
 #canvas {
     /* border: 0.2rem solid white; */
@@ -182,6 +212,11 @@ body {
 	cursor: pointer;
 	-webkit-appearance: none;
 	margin-top: -4px;
+}
+
+.disabled__element {
+    pointer-events: none;
+    opacity: .3;
 }
 
 @media only screen and (max-width: 1024px) {
