--- a/lists-canvas/styles.css
+++ b/lists-canvas/styles.css
@@ -1,9 +1,13 @@
 body {
     margin: 0;
     padding: 0;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
 }
 
 canvas {
-    width: 100%;
-    height: 100vh;
+    width: 400px;
+    height: 600px;
+    /* background-color: black; */
 }
